terraform/modules/security_groups/main.tf
resource "aws_security_group" "bastion" {
  name = "bastion"
  description = "bastion"
  vpc_id = "${var.vpc_id}"

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = "${var.access_ip_ranges}"
  }

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = "${var.access_ip_ranges}"
  }

  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = "${var.access_ip_ranges}"
  }
}

resource "aws_security_group" "build" {
  name = "build"
  description = "build"
  vpc_id = "${var.vpc_id}"

  # ssh access from bastion
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    # security_groups = ["${aws_security_group.bastion.id}"]
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
